# tactical

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  helloworld.txt
Documents/GDD/: main.aux  main.tex  main.toc
Documents/GDD/template/: main.aux  main.toc
docs/: CMakeLists.txt
docs/GDD/: CMakeLists.txt  main.tex
docs/GDD/template/: CMakeLists.txt
docs/UML/: CMakeLists.txt  class_diagram.tex
docs/coding_standard/: CMakeLists.txt  main.tex
include/: action.h  character.h  entitycharacter.h  game.h  gameai.h  gameboard.h  gameboardview.h  goal.h  humanplayer.h  player.h  pollingqueue.h  queues.h  utility.h
include/impl/: action.h  character.h  game.h  gameai.h  gameboard.h  gameboardview.h  goal.h  humanplayer.h  player.h  pollingqueue.h  utility.h
src/: action.cpp  character.cpp  entitycharacter.cpp  game.cpp  gameai.cpp  gameboard.cpp  gameboardview.cpp  humanplayer.cpp  main.cpp  player.cpp  utility.cpp
